--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li>Features</li>
+          <li><a href="#features">Features</a></li>
           <li>Services</li>
           <li>Employee</li>
           <li>Pricing</li>
@@ -57,7 +57,7 @@
         something awesome together!
       </p>
 
-      <p style="display: flex; justify-content: center; align-items: center; font-size: 20px;">Experiences of our employes</p>
+      <p style="display: flex; justify-content: center; align-items: center; font-size: 20px; font-weight: bolder;">Experiences of our employes</p>
       <div class="Experienced">
         <div class="exp">100+ hrs of works</div>
         <div class="exp">Degree in this field</div>
@@ -65,11 +65,32 @@
       </div>
     </div>
 
-    <div class="Features">
+    <div id="features" class="Features">
       <h1>Features you get if decide to work with us</h1>
-      <div class="features-for-you-get">
-         
+      <div class="features-you-get">
+         <ul>
+            <li>
+               <h2>1. No Coding Required</h2>
+               <p>Leave the technical stuff to us. We build websites and apps without needing you to learn a single line of code.</p>
+            </li>
+            <li>
+               <h2>2. Fully Customizable</h2>
+               <p>Your ideas, your style. We tailor every project to match your vision and brand identity.</p>
+            </li>
+            <li>
+               <h2>3. Responsive and Mobile-Friendly</h2>
+               <p>Your website or app will look great and work perfectly on all devices, from desktops to smartphones.</p>
+            </li>
+            <li>
+               <h2>4. Affordable Solutions</h2>
+               <p>High-quality work at a price that won't break the bank.</p>
+            </li>
+         </ul>
       </div>
+    </div>
+
+    <div id="services" class="services">
+      <h1>Services you get if you work with us</h1>
     </div>
 
   </body>
