--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Company</title>
 
     <link rel="stylesheet" href="styles.css" />
+
   </head>
   <body>
     <nav>
       <div class="left-side-nav">
-        <h1>Company</h1>
+        <h1 style="font-size: 40px;">Company</h1>
       </div>
 
       <div class="right-side-nav">
@@ -18,8 +19,8 @@
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#features">Features</a></li>
-          <li>Services</li>
-          <li>Employee</li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#employee">Employee</a></li>
           <li>Pricing</li>
           <li>Contact</li>
         </ul>
@@ -45,15 +46,8 @@
     <div id="about" class="about">
       <h3>MORE ABOUT US</h3>
       <p>
-        At The Company, we believe in turning ideas into digital reality.
-        Whether you're an entrepreneur, a small business owner, or someone with
-        big dreams, we've got you covered. Our team specializes in creating
-        websites and apps that not only look great but also work seamlessly. No
-        coding knowledge? No problem! We're here to make the process simple,
-        fun, and stress-free. We're passionate about technology and committed to
-        delivering high-quality solutions that meet your needs. While we can't
-        help you find a girlfriend (sorry about that), we can definitely help
-        you impress your friends with your amazing website or app. Let's build
+        At The Company, we believe in turning ideas into digital reality. Whether you're an entrepreneur, a small business owner, or someone with big dreams, we've got you covered. Our team specializes in creating websites and apps that not only look great but also work seamlessly. No coding knowledge? No problem! We're here to make the process simple, fun, and stress-free. We're passionate about technology and committed to delivering high-quality solutions that meet your needs. While we can't
+        help you find a girlfriend (sorry about that), we can definitely help you impress your friends with your amazing website or app. Let's build
         something awesome together!
       </p>
 
@@ -90,7 +84,76 @@
     </div>
 
     <div id="services" class="services">
-      <h1>Services you get if you work with us</h1>
+      <h1 style="font-size: 30px;
+      color: wheat;
+      margin-bottom: 10px;">Services you get if you work with us</h1>
+      <div class="services-you-get">
+            <div class="service-card">
+               <h2>1. Custom Website Development</h2>
+               <p>From personal blogs to professional business sites, we build tailored websites that match your style and requirements.
+               </p>
+            </div>
+            <div class="service-card">
+               <h2>2. Mobile App Development</h2>
+               <p>Get modern, user-friendly mobile apps for Android and iOS platforms, designed to meet your unique needs.</p>
+            </div>
+            <div class="service-card">
+               <h2>E-commerce Solutions</h2>
+               <p>Start selling online with our seamless<br> e-commerce development services, complete with payment integration and inventory management.</p>
+            </div>
+      </div>
+    </div>
+
+    <div class="employes" id="employee">
+       <h1>This is our highly trained employees</h1>
+       <div class="employee">
+         <div class="employee-card">
+            <h2>1. Shrabya</h2>
+            <div class="containner_employee">
+               <img src="/res/Shrabya_github.png" style="width: 200px;">
+               <div class="middle">
+                  <div class="github_link">
+                     <a href="https://github.com/Shrabya35" target="_blank" ><button style="border: none;">
+                        GitHub Link
+                     </button></a>
+                  </div>
+               </div>
+            </div>
+            <div class="bottom">
+
+               <p style="width: 200px; text-align: center;">Languages known: HTML, CSS, JAVA, React.js, Node.js, C++, MySQL, etc</p>
+               
+               <a href="/res/Shrabya_github.png" download="Shrabya_Cv.pdf">
+                  <button>Download Cv<img src="/res/download.svg"></button>
+               </a>
+            </div>
+      </div>
+
+      <div class="employee-card">
+         <h2>1. Shrabya</h2>
+         <div class="containner_employee">
+            <img src="/res/Kabya_github.png" style="width: 200px;">
+            <div class="middle">
+               <div class="github_link">
+                  <a href="https://github.com/KabyaChalise" target="_blank" ><button style="border: none;">
+                     GitHub Link
+                  </button></a>
+               </div>
+            </div>
+         </div>
+         <div class="bottom">
+
+            <p style="width: 200px; text-align: center;">Languages known: HTML, CSS, C++, CMake, DArt, Swift, Flutter, MySQL, etc</p>
+            
+            <a href="/res/Shrabya_github.png" download="Shrabya_Cv.pdf">
+               <button>Download Cv<img src="/res/download.svg"></button>
+            </a>
+         </div>
+   </div>
+
+   </div>
+   
+
     </div>
 
   </body>
