--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       </div>
 
       <div class="employee-card">
-         <h2>1. Shrabya</h2>
+         <h2>2. Kabya</h2>
          <div class="containner_employee">
             <img src="/res/Kabya_github.png" style="width: 200px;">
             <div class="middle">
