--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
          <div class="employee-card">
             <h2>1. Shrabya</h2>
             <div class="containner_employee">
-               <img src="/res/Shrabya_github.png" style="width: 200px;">
+               <img src="res/Shrabya_github.png" style="width: 200px;">
                <div class="middle">
                   <div class="github_link">
                      <a href="https://github.com/Shrabya35" target="_blank" ><button style="border: none;">
@@ -123,8 +123,8 @@
 
                <p style="width: 200px; text-align: center;">Languages known: HTML, CSS, JAVA, React.js, Node.js, C++, MySQL, etc</p>
                
-               <a href="/res/Shrabya_github.png" download="Shrabya_Cv.pdf">
-                  <button>Download Cv<img src="/res/download.svg"></button>
+               <a href="res/Shrabya_github.png" download="Shrabya_Cv.pdf">
+                  <button>Download Cv<img src="res/download.svg"></button>
                </a>
             </div>
       </div>
@@ -132,7 +132,7 @@
       <div class="employee-card">
          <h2>2. Kabya</h2>
          <div class="containner_employee">
-            <img src="/res/Kabya_github.png" style="width: 200px;">
+            <img src="res/Kabya_github.png" style="width: 200px;">
             <div class="middle">
                <div class="github_link">
                   <a href="https://github.com/KabyaChalise" target="_blank" ><button style="border: none;">
@@ -145,8 +145,8 @@
 
             <p style="width: 200px; text-align: center;">Languages known: HTML, CSS, C++, CMake, DArt, Swift, Flutter, MySQL, etc</p>
             
-            <a href="/res/Shrabya_github.png" download="Shrabya_Cv.pdf">
-               <button>Download Cv<img src="/res/download.svg"></button>
+            <a href="res/Shrabya_github.png" download="Shrabya_Cv.pdf">
+               <button>Download Cv<img src="res/download.svg"></button>
             </a>
          </div>
    </div>
