--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>Company</title>
 
     <link rel="stylesheet" href="styles.css" />
-
   </head>
   <body>
     <nav>
       <div class="left-side-nav">
-        <h1 style="font-size: 40px;">Company</h1>
+        <h1 style="font-size: 40px">Company</h1>
       </div>
 
       <div class="right-side-nav">
@@ -46,12 +45,29 @@
     <div id="about" class="about">
       <h3>MORE ABOUT US</h3>
       <p>
-        At The Company, we believe in turning ideas into digital reality. Whether you're an entrepreneur, a small business owner, or someone with big dreams, we've got you covered. Our team specializes in creating websites and apps that not only look great but also work seamlessly. No coding knowledge? No problem! We're here to make the process simple, fun, and stress-free. We're passionate about technology and committed to delivering high-quality solutions that meet your needs. While we can't
-        help you find a girlfriend (sorry about that), we can definitely help you impress your friends with your amazing website or app. Let's build
+        At The Company, we believe in turning ideas into digital reality.
+        Whether you're an entrepreneur, a small business owner, or someone with
+        big dreams, we've got you covered. Our team specializes in creating
+        websites and apps that not only look great but also work seamlessly. No
+        coding knowledge? No problem! We're here to make the process simple,
+        fun, and stress-free. We're passionate about technology and committed to
+        delivering high-quality solutions that meet your needs. While we can't
+        help you find a girlfriend (sorry about that), we can definitely help
+        you impress your friends with your amazing website or app. Let's build
         something awesome together!
       </p>
 
-      <p style="display: flex; justify-content: center; align-items: center; font-size: 20px; font-weight: bolder;">Experiences of our employes</p>
+      <p
+        style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 20px;
+          font-weight: bolder;
+        "
+      >
+        Experiences of our employes
+      </p>
       <div class="Experienced">
         <div class="exp">100+ hrs of works</div>
         <div class="exp">Degree in this field</div>
@@ -62,99 +78,117 @@
     <div id="features" class="Features">
       <h1>Features you get if decide to work with us</h1>
       <div class="features-you-get">
-         <ul>
-            <li>
-               <h2>1. No Coding Required</h2>
-               <p>Leave the technical stuff to us. We build websites and apps without needing you to learn a single line of code.</p>
-            </li>
-            <li>
-               <h2>2. Fully Customizable</h2>
-               <p>Your ideas, your style. We tailor every project to match your vision and brand identity.</p>
-            </li>
-            <li>
-               <h2>3. Responsive and Mobile-Friendly</h2>
-               <p>Your website or app will look great and work perfectly on all devices, from desktops to smartphones.</p>
-            </li>
-            <li>
-               <h2>4. Affordable Solutions</h2>
-               <p>High-quality work at a price that won't break the bank.</p>
-            </li>
-         </ul>
+        <ul>
+          <li>
+            <h2>1. No Coding Required</h2>
+            <p>
+              Leave the technical stuff to us. We build websites and apps
+              without needing you to learn a single line of code.
+            </p>
+          </li>
+          <li>
+            <h2>2. Fully Customizable</h2>
+            <p>
+              Your ideas, your style. We tailor every project to match your
+              vision and brand identity.
+            </p>
+          </li>
+          <li>
+            <h2>3. Responsive and Mobile-Friendly</h2>
+            <p>
+              Your website or app will look great and work perfectly on all
+              devices, from desktops to smartphones.
+            </p>
+          </li>
+          <li>
+            <h2>4. Affordable Solutions</h2>
+            <p>High-quality work at a price that won't break the bank.</p>
+          </li>
+        </ul>
       </div>
     </div>
 
     <div id="services" class="services">
-      <h1 style="font-size: 30px;
-      color: wheat;
-      margin-bottom: 10px;">Services you get if you work with us</h1>
+      <h1 style="font-size: 30px; color: wheat; margin-bottom: 10px">
+        Services you get if you work with us
+      </h1>
       <div class="services-you-get">
-            <div class="service-card">
-               <h2>1. Custom Website Development</h2>
-               <p>From personal blogs to professional business sites, we build tailored websites that match your style and requirements.
-               </p>
-            </div>
-            <div class="service-card">
-               <h2>2. Mobile App Development</h2>
-               <p>Get modern, user-friendly mobile apps for Android and iOS platforms, designed to meet your unique needs.</p>
-            </div>
-            <div class="service-card">
-               <h2>E-commerce Solutions</h2>
-               <p>Start selling online with our seamless<br> e-commerce development services, complete with payment integration and inventory management.</p>
-            </div>
+        <div class="service-card">
+          <h2>1. Custom Website Development</h2>
+          <p>
+            From personal blogs to professional business sites, we build
+            tailored websites that match your style and requirements.
+          </p>
+        </div>
+        <div class="service-card">
+          <h2>2. Mobile App Development</h2>
+          <p>
+            Get modern, user-friendly mobile apps for Android and iOS platforms,
+            designed to meet your unique needs.
+          </p>
+        </div>
+        <div class="service-card">
+          <h2>E-commerce Solutions</h2>
+          <p>
+            Start selling online with our seamless<br />
+            e-commerce development services, complete with payment integration
+            and inventory management.
+          </p>
+        </div>
       </div>
     </div>
 
     <div class="employes" id="employee">
-       <h1>This is our highly trained employees</h1>
-       <div class="employee">
-         <div class="employee-card">
-            <h2>1. Shrabya</h2>
-            <div class="containner_employee">
-               <img src="res/Shrabya_github.png" style="width: 200px;">
-               <div class="middle">
-                  <div class="github_link">
-                     <a href="https://github.com/Shrabya35" target="_blank" ><button style="border: none;">
-                        GitHub Link
-                     </button></a>
-                  </div>
-               </div>
-            </div>
-            <div class="bottom">
-
-               <p style="width: 200px; text-align: center;">Languages known: HTML, CSS, JAVA, React.js, Node.js, C++, MySQL, etc</p>
-               
-               <a href="res/Shrabya_github.png" download="Shrabya_Cv.pdf">
-                  <button>Download Cv<img src="res/download.svg"></button>
-               </a>
-            </div>
-      </div>
-
-      <div class="employee-card">
-         <h2>2. Kabya</h2>
-         <div class="containner_employee">
-            <img src="res/Kabya_github.png" style="width: 200px;">
+      <h1>This is our highly trained employees</h1>
+      <div class="employee">
+        <div class="employee-card">
+          <h2>1. Shrabya</h2>
+          <div class="containner_employee">
+            <img src="res/Shrabya_github.png" style="width: 200px" />
             <div class="middle">
-               <div class="github_link">
-                  <a href="https://github.com/KabyaChalise" target="_blank" ><button style="border: none;">
-                     GitHub Link
-                  </button></a>
-               </div>
+              <div class="github_link">
+                <a href="https://github.com/Shrabya35" target="_blank"
+                  ><button style="border: none">GitHub Link</button></a
+                >
+              </div>
             </div>
-         </div>
-         <div class="bottom">
+          </div>
+          <div class="bottom">
+            <p style="width: 200px; text-align: center">
+              Languages known: HTML, CSS, JAVA, React.js, Node.js, C++, MySQL,
+              etc
+            </p>
 
-            <p style="width: 200px; text-align: center;">Languages known: HTML, CSS, C++, CMake, DArt, Swift, Flutter, MySQL, etc</p>
-            
             <a href="res/Shrabya_github.png" download="Shrabya_Cv.pdf">
-               <button>Download Cv<img src="res/download.svg"></button>
+              <button>Download Cv<img src="res/download.svg" /></button>
             </a>
-         </div>
-   </div>
+          </div>
+        </div>
 
-   </div>
-   
+        <div class="employee-card">
+          <h2>2. Kabya</h2>
+          <div class="containner_employee">
+            <img src="res/Kabya_github.png" style="width: 200px" />
+            <div class="middle">
+              <div class="github_link">
+                <a href="https://github.com/KabyaChalise" target="_blank"
+                  ><button style="border: none">GitHub Link</button></a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="bottom">
+            <p style="width: 200px; text-align: center">
+              Languages known: HTML, CSS, C++, CMake, DArt, Swift, Flutter,
+              MySQL, etc
+            </p>
 
+            <a href="res/Shrabya_github.png" download="Shrabya_Cv.pdf">
+              <button>Download Cv<img src="res/download.svg" /></button>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-
   </body>
 </html>
