--- a/index.html
+++ b/index.html
@@ -168,13 +168,11 @@
         <div class="employee-card">
           <h2>2. Kabya</h2>
           <div class="containner_employee">
-            <img src="res/Kabya_github.png" style="width: 200px" />
+            <img class="image_of_github" src="res/Kabya_github.png" style="width: 200px" />
             <div class="middle">
-              <div class="github_link">
                 <a href="https://github.com/KabyaChalise" target="_blank"
                   ><button style="border: none">GitHub Link</button></a
                 >
-              </div>
             </div>
           </div>
           <div class="bottom">
