--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <li><a href="#features">Features</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#employee">Employee</a></li>
-          <li>Pricing</li>
-          <li>Contact</li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -76,7 +76,7 @@
     </div>
 
     <div id="features" class="Features">
-      <h1>Features you get if decide to work with us</h1>
+      <h1 style="color: wheat;" >Features you get if decide to work with us</h1>
       <div class="features-you-get">
         <ul>
           <li>
@@ -139,7 +139,7 @@
     </div>
 
     <div class="employes" id="employee">
-      <h1>This is our highly trained employees</h1>
+      <h1 style="color: wheat;">This is our highly trained employees</h1>
       <div class="employee">
         <div class="employee-card">
           <h2>1. Shrabya</h2>
@@ -148,7 +148,7 @@
             <div class="middle">
               <div class="github_link">
                 <a href="https://github.com/Shrabya35" target="_blank"
-                  ><button style="border: none">GitHub Link</button></a
+                  ><button style="border: none;">GitHub Link</button></a
                 >
               </div>
             </div>
@@ -186,7 +186,69 @@
             </a>
           </div>
         </div>
+
+        <div class="employee-card" style="display: flex;
+          justify-content: center; align-items: center;">
+          <h1 style="width: 250px; ">More Employee Comming soon</h1>
+        </div>
+
       </div>
     </div>
+
+    <div id="pricing" class="pricing-containner">
+      <h1 style="color: wheat;">These are some base prices</h1>
+      <div class="prices">
+        <div class="price_card">
+          <div class="price-top">
+            <h2>Simple</h2>
+            <p>$5</p>
+          </div>
+          <ul style="font-weight: 600;">
+            <li>Simple website</li>
+            <li>Simple App</li>
+            <li>Simple design</li>
+            <li>Simple functions</li>
+          </ul>
+        </div>
+
+        <div class="price_card">
+          <div class="price-top">
+            <h2>Middle</h2>
+            <p>$10</p>
+          </div>
+          <ul style="font-weight: 600;">
+            <li>Middle website</li>
+            <li>Middle App</li>
+            <li>Middle design</li>
+            <li>Middle functions</li>
+          </ul>
+        </div>
+
+        <div class="price_card">
+          <div class="price-top">
+            <h2>Pro</h2>
+            <p>$20</p>
+          </div>
+          <ul style="font-weight: 600;">
+            <li>Pro website</li>
+            <li>Pro App</li>
+            <li>Pro design</li>
+            <li>Pro functions</li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+
+    <div id="contact" class="contact-containner">
+      <h1 style="color: wheat;">Contacts</h1><br>
+      <ul style="display: flex; gap: 25px; flex-direction: column;">
+        <li style="display: flex; gap: 10px;
+        align-items: center;"><img src="/res/email.png"> <span><a href="mailto:psgplayo@gmail.com">abcd@gmail.com</a></span></li>
+        <li style="display: flex; gap: 10px;
+        align-items: center;"><img src="/res/call.png"><span>+977-9812345678</span></li>
+      </ul>
+    </div>
+
   </body>
 </html>
