--- a/index.html
+++ b/index.html
@@ -250,5 +250,7 @@
       </ul>
     </div>
 
+    <a href="#"><img src="/res/up-arrow.png" style="right: 0; top: 90%;" class="go-to-top"></a>
+
   </body>
 </html>
